# the-love-formula-meme

./: pyproject.toml
src/suflaj_tlfm/: the_litl_smol_formula.py  the_love_formula.py
